chore: renamed class and imports from into their dependents
Signed-off-by: Maximillian Arruda <dearrudam@gmail.com>